@@ -189,6 +189,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #16541: tk_setPalette() now works with keyword arguments.
+
 - Issue #16819: IDLE method completion now correctly works for bytes literals.
 
 - Issue #9586: Redefine SEM_FAILED on MacOSX to keep compiler happy.
